--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint": "^6.8.0",
     "prettier": "^1.19.1",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2"
+    "eslint-plugin-prettier": "^3.1.2",
+    "babel-eslint": "^10.1.0"
   },
   "dependencies": {
     "@aws-cdk/core": "1.126.0",
