--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.126.0",
-    "eslint": "^6.8.0",
-    "prettier": "^1.19.1",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "babel-eslint": "^10.1.0"
+    "@babel/eslint-parser": "^7.15.8",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^1.19.1"
   },
   "dependencies": {
     "@aws-cdk/core": "1.126.0",
