--- a/.eslintrc
+++ b/.eslintrc
@@ -12,11 +12,10 @@
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
+    "requireConfigFile": false
   },
-  "parser": "babel-eslint",
   "plugins": [
     "prettier"
   ],
@@ -28,7 +27,7 @@
     "no-unused-vars": [
       1,
       {
-        "ignoreSiblings": true,
+        "ignoreRestSiblings": true,
         "argsIgnorePattern": "res|next|^err|^_"
       }
     ],
