Feat/format guidegroup create (#6)
* added babel eslint parser

* yarn lock

* updated packages

* eslint 8 fixes

* yarn lock

* added jest true to eslintrc env

* fixed linting errors

Co-authored-by: Ehsan Zilaei <zzilaei@gmail.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,15 +6,16 @@
   "env": {
     "node": true,
     "browser": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
+    "requireConfigFile": false
   },
   "plugins": [
     "prettier"
@@ -27,7 +28,7 @@
     "no-unused-vars": [
       1,
       {
-        "ignoreSiblings": true,
+        "ignoreRestSiblings": true,
         "argsIgnorePattern": "res|next|^err|^_"
       }
     ],
