--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "sst build",
     "deploy": "sst deploy",
     "remove": "sst remove",
-    "lint": "eslint --ignore-path .gitignore ."
+    "lint": "eslint --ignore-path .gitignore .",
+    "export-docs": "sh export-docs.sh",
+    "run-docs": "node docs/server.js"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.126.0",
@@ -29,6 +31,7 @@
     "@serverless-stack/cli": "0.46.0",
     "@serverless-stack/resources": "0.46.0",
     "ajv": "^8.8.2",
-    "aws-sdk": "^2.1006.0"
+    "aws-sdk": "^2.1006.0",
+    "swagger-ui-express": "^4.2.0"
   }
 }
