--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aws-cdk/core": "1.126.0",
     "@middy/core": "^2.5.3",
     "@middy/http-error-handler": "^2.5.3",
+    "@middy/http-event-normalizer": "^2.5.3",
     "@middy/http-json-body-parser": "^2.5.3",
     "@middy/validator": "^2.5.3",
     "@serverless-stack/cli": "0.46.0",
